[package]
name = "surrealize_derive"
version = "0.1.1"
edition = "2021"
readme = "../README.md"
license = "GPL-2.0"
repository = "https://github.com/norpie/surrealize"
description = "The derive macro for the surrealize crate"
keywords = ["surrealdb", "surrealize", "procedural-macro", "derive"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.91", features = ["full"] }
